# py_efficient_payer

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
py_contractor/config/: config.py  loggers.py
py_contractor/core/: paye.py
py_contractor/dash/: panel_main.py
py_contractor/tests/prototypes/: proto_oauth_panel3.py
py_contractor/tests/reports/: test_informal__paye_report.html
py_contractor/tests/test_scripts/: test_informal__paye.py
